--- a/Source Detection - Find peaks.ipynb
+++ b/Source Detection - Find peaks.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee738f91",
+   "id": "ae1f4de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "    ra=sk.ra\n",
     "    dec=sk.dec\n",
     "    \n",
-    "    # built and save catalog \n",
+    "    # build and save catalog \n",
     "    #----------------------------------------\n",
     "    colnames=['x','y','raj2000','dej2000']\n",
     "    coldata=[tbl['x_centroid'],tbl['y_centroid'],ra,dec]\n",
