--- a/PHANGS-JWST-Cycle1-photometry.ipynb
+++ b/PHANGS-JWST-Cycle1-photometry.ipynb
@@ -135,7 +135,7 @@
     "      \n",
     "#----------------------------------------------------\n",
     "# For NGC628 we have two catalogs so it's necesary to\n",
-    "# change the name needed for open the images\n",
+    "# change the name needed to open the images\n",
     "#----------------------------------------------------\n",
     "        \n",
     "    if galaxy=='ngc628':\n",
@@ -146,7 +146,7 @@
     "        galaxy_jwst=galaxy\n",
     "    \n",
     "#----------------------------------------------------\n",
-    "# Open source catalog and create the new photometry catalog\n",
+    "# Open source catalog (from findpeaks) and create the new photometry catalog\n",
     "#----------------------------------------------------\n",
     "    \n",
     "    sources=ascii.read(\"/astro/phangshst/jimena/Photometry/final_src_f335m/v1p1/\"+galaxy_jwst+\"_sources_f335m.csv\")\n",
@@ -156,7 +156,7 @@
     "    cat=QTable(coldata,names=colnames)\n",
     "\n",
     "#----------------------------------------------------\n",
-    "#File with vega zero points values:\n",
+    "#File with Vega zero points values:\n",
     "#https://app.box.com/s/o634trsuvver01b7x7ft0lebnngdqoxj\n",
     "#File with Foreground extintion values:\n",
     "#https://app.box.com/s/fcwe2sktg3bf9skztuap3o9wob7v28hp\n",
@@ -174,13 +174,13 @@
     "# according to the ReadMe file:\n",
     "# https://app.box.com/s/6e3j2sx60afwshwiaijn5qrcnet6e08l\n",
     "# The offsets we apply to the measured V-band aperture\n",
-    "#correction for NUV, U, B, and I bands are\n",
+    "# correction for NUV, U, B, and I bands are\n",
     "# −0.19, −0.12, −0.03, and −0.12 mags, respectively.\n",
     "# for F628n, F627n, F550m, F547m the values were\n",
-    "#derived using linear interpolation\n",
+    "# derived using linear interpolation\n",
     "\n",
-    "#Aperture corrections for Nircam band:\n",
-    "#were derived as expained in R0driguez+25\n",
+    "# Aperture corrections for NIRCAM band:\n",
+    "# were derived as expained in Rodriguez+25\n",
     "\n",
     "# JWST Vega zero points from\n",
     "# http://svo2.cab.inta-csic.es/svo/theory/fps3/index.php?mode=browse&gname=JWST&gname2=MIRI&asttype=\n",
@@ -237,7 +237,7 @@
     "        if band=='f275w' or band=='f336w' or band=='f435w' or band=='f438w' or band=='f547m' or band=='f550m' or band=='f555w' or band=='f658n' or band=='f658n_c' or band=='f657n' or band=='f814w':\n",
     "            pix_as=0.03962  # pixel size in arcsec for HST\n",
     "            r_aper_as=4*pix_as # aperture = 4 pixels =0.158\"\n",
-    "            an_in=7.          \n",
+    "            an_in=7. \n",
     "            an_out=9.\n",
     "            an_ape_in=an_in*pix_as   #inner annulus radius\n",
     "            an_ape_out=an_out*pix_as #outer annulus radius\n",
@@ -268,7 +268,7 @@
     "        if band=='f770w' or band=='f1000w' or band=='f1130w' or band=='f2100w':\n",
     "            pix_as=0.11 # pixel size in arcsec for MIRI\n",
     "            \n",
-    "            #The apertures in each MIRI band correspond to the 50% encircle energy value:\n",
+    "            #The apertures in each MIRI band correspond to the 50% encircled energy value:\n",
     "            # https://jwst-docs.stsci.edu/jwst-mid-infrared-instrument/miri-performance/miri-point-spread-functions\n",
     "            # Latest updates: original 13 Nov 2018  ?\n",
     "            if band=='f770w':\n",
@@ -359,7 +359,7 @@
     "            datan[idxstatserror] = 1./np.sqrt(datan[idxstatserror])\n",
     "            \n",
     "            # PHOTFNU is the Inverse sensitivity, Jy*sec/e- \n",
-    "            # the factor to_MJy gives the conversion form e-/s to megaJy\n",
+    "            # the factor to_MJy gives the conversion from e-/s to megaJy\n",
     "            to_MJy=header['PHOTFNU']/1e6\n",
     "            \n",
     "            # 'counts' gives the conversion from e-/s, \n",
@@ -597,7 +597,7 @@
     "\n",
     "\n",
     "        w = WCS(header)\n",
-    "        x,y=skycoord_to_pixel(positions_sk, w)  # trasform sky coordinates to x, y positions in the image\n",
+    "        x,y=skycoord_to_pixel(positions_sk, w)  # transform sky coordinates to x, y positions in the image\n",
     "        positions_xy=np.transpose((x, y))\n",
     "\n",
     "        \n",
@@ -610,7 +610,7 @@
     "        annulus_aperture_xy=CircularAnnulus(positions_xy, an_ape_in/pix_as, an_ape_out/pix_as)\n",
     "        # Create a mask for the annulus\n",
     "        annulus_masks = annulus_aperture_xy.to_mask(method='exact')\n",
-    "        # Sigma clipping that will be applied to the annulus to remove possible sources  \n",
+    "        # Sigma clipping that will be applied to the annulus to remove possible contaminating sources  \n",
     "        sigclip = SigmaClip(sigma=3.0, maxiters=5)\n",
     "\n",
     "        # Photometry in the aperture\n",
@@ -622,13 +622,14 @@
     "        \n",
     "        bkg_median=bkg_stats.median\n",
     "        bkg_median[np.isnan(bkg_median)]=0\n",
-    "       \n",
     "        \n",
-    "\n",
+    "        \n",
+    "        \n",
     "        \n",
     "        #------------------------------------------------ \n",
     "        #Estimate the 90th and 10th percentile of the background\n",
     "        # that will be used later for the uncertainties estimation \n",
+    "        # This is done with and without sigma-clipping for testing. \n",
     "        #------------------------------------------------ \n",
     "        bkg_10=[]\n",
     "        bkg_90=[]\n",
@@ -669,7 +670,7 @@
     "            \n",
     "            \n",
     "        #-------------------------------------------- \n",
-    "        # estimate the area of the aperture and the annulus \n",
+    "        # calculate the area of the aperture and the annulus \n",
     "        area_aper=aper_stats.sum_aper_area.value\n",
     "        area_aper[np.isnan(area_aper)]=0\n",
     "        area_sky=bkg_stats.sum_aper_area.value\n",
@@ -714,7 +715,8 @@
     "        # 'flux_dens_err_9010' and 'flux_dens_err_9010_clip' include an \n",
     "        # additional term that reflects the variation in measurement when \n",
     "        # using the 10th and 90th percentiles of the background. \n",
-    "        # This difference corresponds to 4.6 sigma.\n",
+    "        # This difference corresponds to 4.6 sigma if the distribution\n",
+    "        #  of background annulus values is Gaussian.\n",
     "        # Therefore, we divide by 4.6 to obtain the 1 sigma uncertainty\n",
     "        #-------------------------------------------- \n",
     "        \n",
@@ -723,7 +725,7 @@
     "        flux_dens_err_9010_clip = np.sqrt(flux_dens_err**2 + (flux_dens_bkg_10_clip - flux_dens_bkg_90_clip)**2)/4.6\n",
     "        \n",
     "        \n",
-    "        #Sigma to Noise in each case\n",
+    "        #Signal to Noise in each case\n",
     "        s2n_old=flux_dens/flux_dens_err\n",
     "        s2n=flux_dens/flux_dens_err_9010\n",
     "        s2n_clip=flux_dens/flux_dens_err_9010_clip\n",
@@ -734,7 +736,7 @@
     "        flux_err_9010=flux_dens_err_9010*to_MJy\n",
     "        flux_err_9010_clip=flux_dens_err_9010_clip*to_MJy\n",
     "\n",
-    "        # flux_bkg is the flux that I am sustraction from the aperture\n",
+    "        # flux_bkg is the flux that I am subtracting from the aperture\n",
     "        flux_bkg=(total_bkg/counts)*to_MJy*10**((ac-fg_ext)/-2.5)\n",
     "        # flux_plus_bkg is the flux in the aperture before sustraction the background\n",
     "        flux_plus_bkg=(phot['aperture_sum']/counts)*to_MJy*10**((ac-fg_ext)/-2.5)\n",
@@ -742,7 +744,7 @@
     "        #---------------------------------------------------\n",
     "        # JWST MIRI bands\n",
     "        #For MIRI bands the photometry was performed with the aperture size corresponding \n",
-    "        #to the 50% encircle energy. \n",
+    "        #to the 50% encircled energy. \n",
     "        #So we multiply by two to obtain the total energy of the source\n",
     "        #--------------------------------------------------- \n",
     "        \n",
@@ -758,7 +760,7 @@
     "\n",
     "\n",
     "        #---------------------------------------------------\n",
-    "        # Transform to magnitude\n",
+    "        # Transform to magnitudes\n",
     "        #---------------------------------------------------       \n",
     "        mag_ab=-2.5*np.log10(flux/ZP_ab)\n",
     "        mag_veg=-2.5*np.log10(flux/ZP_v)\n",
@@ -771,8 +773,8 @@
     "\n",
     "\n",
     "#---------------------------------------------------\n",
-    "# Built catalog\n",
-    "# Multiply flux densities to 1E9 to convert to mjy\n",
+    "# Build catalog\n",
+    "# Multiply flux densities by 1E9 to convert to mJy\n",
     "#---------------------------------------------------\n",
     "        cat.add_column(flux*1E9,name='flux_'+band.upper())\n",
     "        cat.add_column(flux_err*1E9,name='er_flux_'+band.upper())\n",
